# AI-Squad

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COLLAB_CONFIG_CHANGES.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  CRITICAL-REVIEW.md  CRITICAL_REVIEW.md  FIXES_APPLIED.md  FUNCTIONALITY-REVIEW.md  HYBRID_A2A_GAPS.md  IMPLEMENTATION-SUMMARY.md  INCOMPLETE_WORK.md  LIVE_TEST_RESULTS.md  MANIFEST.in  Makefile  PHASE-1-2-COMPLETE.md  QUALITY-SUMMARY.md  QUICK-START.md  README.md  Skills.md  VERIFICATION-REPORT.md  VERIFICATION-SUMMARY.md  WATCH-MODE-COMPLETE.md  diagnose_enterprise.py  idea_management_prd_full.txt  pyproject.toml  requirements.txt  setup.py  squad.yaml.example  test_copilot_auth.py  test_copilot_sdk.py  test_idea_management.py  test_no_providers.py  test_prd_output.txt  test_provider_chain.py  test_results_idea_management.txt  test_suite.py  test_with_providers.py
.ai_squad/: metrics.db
.githooks/: pre-push
.github/: copilot-instructions.md
.github/agents/: architect.md  pm.md
.squad/events/: routing.jsonl
.squad/graph/: edges.json  nodes.json
.squad/handoffs/: handoffs.json
.squad/identity/: identity.json
ai_squad/: __init__.py  cli.py  cli.py.backup
ai_squad/agents/: __init__.py  architect.py  base.py  engineer.py  product_manager.py  reviewer.py  ux_designer.py
ai_squad/agents_definitions/: architect.md  engineer.md  reviewer.md  ux.md
ai_squad/core/: __init__.py  agent_card.py  agent_comm.py  agent_executor.py  agent_registry.py  ai_provider.py  autonomous.py  backpressure.py  battle_plan.py  capability_registry.py  captain.py  collaboration.py  config.py  connection_pool.py  constants.py  convoy.py  delegation.py  discovery.py  doctor.py  events.py  formula.py  handoff.py  hooks.py  identity.py  init_project.py  mailbox.py  metrics.py  monitoring.py  operational_graph.py  patrol.py  preflight.py  recon.py  reporting.py  resource_monitor.py  retry.py  router.py  runtime_paths.py  scout_worker.py  sdk_compat.py  (+9 more)
benchmarks/: performance.py
docs/: AUTOMATION-DESIGN.md  AUTONOMOUS.md  BRANDING.md  CLI-GUIDE.md  COMPLETE-WORKFLOW.md  CONFIGURATION-OPPORTUNITIES.md  CRITICAL-WORKFLOW-ISSUE.md  E2E_TEST_REPORT.md  GitHub-Models-API-Integration.md  IMPLEMENTATION-SUMMARY.md  INVESTIGATION-VALIDATION-GAPS.md  ORCHESTRATION.md  README.md  WATCH-MODE-IMPLEMENTATION.md  WATCH-MODE-QUICK-REF.md  WORKFLOW-GAP-ANALYSIS.md  commands.md  configuration.md  quickstart.md
scripts/: check_copilot_sdk_version.py
test-project/: test_scalability_simple.py
tests/: README.md  conftest.py  e2e-live-test.ps1  e2e-scalability-test.ps1  live_integration_test.py  test_agent_card.py  test_agent_comm.py  test_agent_comm_retry.py  test_agent_registry.py  test_agents.py  test_backpressure.py  test_capability_registry.py  test_captain.py  test_cli.py  test_collaboration.py  test_connection_pool.py  test_convoy_auto_tuning.py  test_core.py  test_dashboard.py  test_delegation.py  test_discovery.py  test_e2e_orchestration.py  test_github_tool.py  test_identity.py  test_integration.py  test_metrics.py  test_operational_graph.py  test_orchestration.py  test_preflight.py  test_resource_monitor.py  test_router.py  test_runtime_extensions.py  test_scout_worker.py  test_status.py  test_storage.py  test_tools.py  test_validation.py  test_watch.py  test_workitem_a2a.py  test_workstate_sqlite.py
(+46 files in other folders)
